# Kubagachi

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  Dockerfile.critterforged  LICENSE  README.md  critters.yaml  deploy.yaml  fast.yaml  go.mod  go.sum
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: docker-publish.yml  helm-release.yml
charts/kubagachi/: .helmignore  Chart.yaml  README.md  values.yaml
cmd/critterforge/: main.go
cmd/critterforged/: main.go  main_test.go
cmd/critterview/: main.go
cmd/kubagachi/: main.go
cmd/sprite-test/: main.go
cmd/spriteanim/: main.go
critters/: manifest.json
deploy/: docker-entrypoint.sh  rbac.yaml
docs/: critterforge-cost.md  critterforge-pipeline.md  critters.md  mascot-references.md  security.md  yscale-integration.md
internal/app/: app.go  config.go  demo.go  demo_test.go  source.go  source_manager.go  web.go  yscale.go
internal/critters/: critters.go  critters_test.go  frames.go  pixel.go
internal/k8s/: actions.go  client.go  client_test.go  crd.go  flux.go  flux_test.go  helm.go  helm_test.go  informers.go  mapper.go  mapper_event_test.go  mapper_job_test.go  metrics.go  object.go  (+3 more)
native/: Cargo.toml  README.md
native/src/: critters.rs  k8s.rs  main.rs  sprites.rs  ui.rs  wire.rs
viewer/: index.html
web/: README.md  embed.go  fast.yaml  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.ts
(+79 files in other folders)
