[package]
name = "kubagachi-native"
version = "0.1.0"
edition = "2021"
description = "Native bare-metal (macOS/Linux) server for the kubagachi cluster cockpit — serves the embedded web UI and a live read-only cluster snapshot from the local kubeconfig."

[[bin]]
name = "kubagachi-native"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.6", features = ["fs", "cors"] }
kube = { version = "0.96", default-features = false, features = ["client", "rustls-tls", "config"] }
k8s-openapi = { version = "0.23", features = ["latest"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
rust-embed = { version = "8", features = ["interpolate-folder-path"] }
mime_guess = "2"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
open = "5"
